# web/controller/client.go
@@ -55,6 +55,7 @@ func (a *ClientController) initRouter(g *gin.RouterGroup) {
 	g.POST("/ips/:email", a.getIps)
 	g.POST("/clearIps/:email", a.clearIps)
 	g.POST("/onlines", a.onlines)
+	g.POST("/onlinesByNode", a.onlinesByNode)
 	g.POST("/lastOnline", a.lastOnline)
 }
 
@@ -395,6 +396,10 @@ func (a *ClientController) clearIps(c *gin.Context) {
 
 func (a *ClientController) onlines(c *gin.Context) {
 	jsonObj(c, a.inboundService.GetOnlineClients(), nil)
+}
+
+func (a *ClientController) onlinesByNode(c *gin.Context) {
+	jsonObj(c, a.inboundService.GetOnlineClientsByNode(), nil)
 }
 
 func (a *ClientController) lastOnline(c *gin.Context) {
